--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my portfolio</title>
 </head>
-<body class='jumbotron container'>
+<body class='jumbotron container overall'>
     
     <div class='navigate'>
         <nav>
